<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <!-- Display scrambled word -->
    <TextView
        android:id="@+id/textView_scrambledWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scrambled_word"
        android:textSize="24sp"
        android:layout_marginBottom="16dp" />

    <!-- Display definition hint -->
    <TextView
        android:id="@+id/textView_definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:layout_marginBottom="16dp"
        android:visibility="gone" />

    <!-- Input field for user answer -->
    <EditText
        android:id="@+id/editText_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_answer_hint"
        android:inputType="text" />

    <!-- Buttons for submit, show hint, skip, and reset -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/button_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_hint"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_margin="8dp" />


    </LinearLayout>

    <!-- Display score -->
    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="80dp"

        android:background="#FF0000"
        android:textColor="#FFFFFF" />
</LinearLayout>
